--- a/style.css
+++ b/style.css
@@ -48,10 +48,11 @@ code {
 /**
  * Styles
  */
-body { 
+body {
+    background: #dfe2e2;
 	position: relative;
 	padding-left: 370px; 
-	font-family: 'Source Sans Pro', Tahoma, 'Helvetica Neue', sans-serif;
+	font-family: 'Source Sans Pro', 'Helvetica Neue', sans-serif;
 }
 
 a { 
@@ -63,30 +64,33 @@ a:hover {
 }
 
 button, .button {
-	background: #ccc;
-    border: 0;
-	color: white;
-	font-size: 13px;
+	background: #e5e9e9;
+    border: 1px solid #9c9e9e;
 	border-radius: 3px;
+    box-shadow: inset 0 1px 0 #fff;
+    color: #454545;
+	font-size: 11px;
+    padding: 1px 10px 3px;
+    vertical-align: middle;
 }
 
 input[type="range"] {
 	-webkit-appearance: none;
 	overflow: hidden;
-	border: 1px solid #d7d7d7;
-	background: #f7f7f7;
+	border: 1px solid #9c9e9e;
+	background: #d3d7d7;
 	text-align: center;
 	font: inherit;
 	border-radius: 3px;
-	box-shadow: 0px 1px 2px rgba(0,0,0,0.1) inset;
+	box-shadow: 0px 1px 0 rgba(0,0,0,0.12) inset;
 }
 
 	input[type="range"]::-webkit-slider-thumb {
 		-webkit-appearance: none;
-		background: #f8b;
+		background: #e5e9e9;
 		height: 13px;
 		width: 13px;
-		border-radius: 2px;
+		border-radius: 3px;
 	}
 	
 	input[type="range"]:in-range {
@@ -177,7 +181,7 @@ header > p {
 }
 
 #P0, #P3 {
-	background: white;
+	background: #d7d7d7;
 }
 
 #P1, #P2 {
@@ -190,11 +194,11 @@ header > p {
 }
 
 #P1 { 
-	background: #f08;
+	background: #fff;
 }
 
 #P2 { 
-	background: #0ab;
+	background: #fff;
 }
 
 #P3 { 
@@ -240,19 +244,17 @@ section {
 }
 
 	section > h1 {
-		margin-bottom: .2em;
-		font-size: 200%;
+		margin-bottom: 15px;
 		font-weight: normal;
 	}
 	
 	section > h1 + p {
 		margin: -.5em 0 1em 0;
-		color: gray;
+		color: #454545;
 	}
 
 #settings > h1 {
 	display: inline-block;
-	font-size: 100%;
 }
 
 #preview {
@@ -271,12 +273,12 @@ section {
 		position: relative;
 		left: 0;
 		margin-bottom: .5em;
-		background: #0ab;
+		background: #fff;
 		border-radius: 5px;
 	}
 	
 	#preview > #current { 
-		background: #f08;
+		background: #288edf;
 	}
 	
 	#preview > .move { 
@@ -289,10 +291,8 @@ section {
 	width: 100px;
 	margin: 0 .8em 1em 0;
 	color: #999;
-	font-size: 110%;
 	text-align: center;
 	text-decoration: none;
-	cursor: pointer;
 	
 }
 	#library > a > canvas,
@@ -308,26 +308,17 @@ section {
 		display: block;
 		position: relative; 
 		left: 0;
-		background: #e5e5e5;
+		background: #fff;
 		
-		border-radius: 5px;
+		border-radius: 3px;
 	}
-	
-	#library > a:hover > canvas,
-	#library > a:focus > canvas {
-		background: #ACD0D5;
-	}
-	
+
 	#library > a > span {
 		display: block;
+        font-size: 13px;
 		overflow: hidden;
 		white-space: nowrap;
 		text-overflow: ellipsis;
-	}
-	
-	#library > a:hover > span,
-	#library > a:focus > span {
-		color: #568C93;
 	}
 	
 	#library > a > button {
@@ -351,18 +342,12 @@ section {
 	}
 	
 #library > a.selected {
-	color: #0ab;
+    box-shadow: 0 0 0 3px #288edf;
 }
 	
 		#library > a.selected > canvas {
-			background: #0ab;
+			background: #fff;
 		}
-		
-#library > footer {
-	clear: both;
-	font-size: 80%;
-	color: #444;
-}
 
 #importexport {
 	position: fixed;
@@ -416,23 +401,3 @@ section {
 		display: none;
 	}
 
-body > footer {
-	position: fixed;
-	top: 0;
-	right: 100%;
-	padding: .5em 1em;
-	white-space: nowrap;
-	font-size: 120%;
-	color: rgba(0, 0, 0, .1);
-	
-	-moz-transform: rotate(-90deg);
-	-moz-transform-origin: top right;
-	-ms-transform: rotate(-90deg);
-	-ms-transform-origin: top right;
-	-o-transform: rotate(-90deg);
-	-o-transform-origin: top right;
-	-webkit-transform: rotate(-90deg);
-	-webkit-transform-origin: top right;
-	transform: rotate(-90deg);
-	transform-origin: top right;
-}
