--- a/style.css
+++ b/style.css
@@ -36,10 +36,15 @@ header > p {
 	transition: 1s;	
 }
 
+#cb-code > a {
+    color: #454545;
+    font-size: 18px;
+    text-decoration: none;
+}
+
 #importexport > textarea,
 code {
 	font-family: 'Source Code Pro', monospace;
-    font-size: 14px;
     font-weight: 500;
 }
 
