--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ code {
  * Styles
  */
 body {
-    background: #dfe2e2;
+    background: #e6e9e9;
     color: #454545;
 	position: relative;
 	padding: 20px 20px 20px 280px; 
@@ -83,29 +83,6 @@ button, .button {
     padding: 1px 10px 3px;
     vertical-align: middle;
 }
-
-input[type="range"] {
-	-webkit-appearance: none;
-	overflow: hidden;
-	border: 1px solid #9c9e9e;
-	background: #d3d7d7;
-	text-align: center;
-	font: inherit;
-	border-radius: 3px;
-	box-shadow: 0px 1px 0 rgba(0,0,0,0.12) inset;
-}
-
-	input[type="range"]::-webkit-slider-thumb {
-		-webkit-appearance: none;
-		background: #e5e9e9;
-		height: 13px;
-		width: 13px;
-		border-radius: 3px;
-	}
-	
-	input[type="range"]:in-range {
-		width: 100px;
-	}
 
 header > p {
 	max-height: 0;
@@ -250,31 +227,25 @@ canvas#curve {
 }
 
 section {
-    border: 1px solid black;
+    background-color: #dfe2e2;
     border-radius: 4px;
 	margin: 10px 0;
-    padding: 10px;
+    padding: 15px;
     overflow: hidden;
 }
 
-	section > h1 {
+	section h1 {
 		margin-bottom: 15px;
 		font-weight: normal;
 	}
 	
-	section > h1 + p {
-        font-size: 12px;
-		margin: -.5em 0 1em 0;
-		color: #454545;
-	}
-
 #settings > h1 {
 	display: inline-block;
 }
 
 #preview {
 	position: relative;
-	padding-right: 80px;
+	padding-right: 40px;
 }
 
 	#preview:after {
@@ -283,7 +254,50 @@ section {
 		clear: both;
 	}
 
-	#preview > canvas {
+    #controls {
+        border-right: 1px solid #d7d7d7;
+        float: left;
+        height: 70px;
+        margin-right: 15px;
+        width: 140px;
+    }
+
+        input[type="range"] {
+            -webkit-appearance: none;
+            margin: 0 0;
+            border: 1px solid #9c9e9e;
+            background: #d3d7d7;
+            text-align: center;
+            font: inherit;
+            border-radius: 3px;
+            box-shadow: 0px 1px 0 rgba(0,0,0,0.12) inset;
+        }
+        
+            input[type="range"]::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                background: #e5e9e9;
+                border: 1px solid #9c9e9e;
+                box-shadow: inset 0 1px 0 #fff;
+                height: 17px;
+                width: 10px;
+                border-radius: 3px;
+            }
+	
+            input[type="range"]:in-range {
+                height: 5px;
+                width: 100px;
+            }
+            
+            output {
+                font-size: 13px;
+            }
+
+    #animation {
+        float: left;
+        width: calc(100% - 170px);
+    }
+
+	#animation > canvas {
 		display: block;
 		position: relative;
 		left: 0;
@@ -293,11 +307,11 @@ section {
         box-shadow: 0 1px 3px rgba(0,0,0,0.24);
 	}
 	
-	#preview > #current { 
+	#animation > #current { 
 		background: #1461FC;
 	}
 	
-	#preview > .move { 
+	#animation > .move { 
 		left: 100%;
 	}
 
