--- a/style.css
+++ b/style.css
@@ -80,7 +80,8 @@ button, .button {
     color: #454545;
 	font-size: 11px;
     margin: 0 0 0 3px;
-    padding: 1px 10px 3px;
+    padding: 2px 10px 3px;
+    text-shadow: 0 1px 0 #fff;
     vertical-align: middle;
 }
 
@@ -194,11 +195,13 @@ header > p {
 }
 
 #P1x, #P1y { 
-	color: #f08;
+	color: #454545;
+    font-weight: 100;
 }
 
 #P2x, #P2y { 
-	color: #0ab;
+	color: #454545;
+    font-weight: 100;    
 }
 
 canvas#curve { 
@@ -354,7 +357,6 @@ section {
 	}
 	
 	#library > a > button {
-        background: #fff;
         border: none;
         box-shadow: none;
         color: rgba(0, 0, 0, 0.5);
@@ -377,7 +379,6 @@ section {
 	}
 	
 #library > a.selected {
-    background-color: #fff;
     color: #000;
 }
 	
