--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ button, .button {
     margin: 0 0 0 3px;
     padding: 2px 10px 3px;
     text-shadow: 0 1px 0 #fff;
-    vertical-align: middle;
+    vertical-align: top;
 }
 
 header > p {
