--- a/style.css
+++ b/style.css
@@ -55,13 +55,14 @@ body {
     background: #e6e9e9;
     color: #454545;
 	position: relative;
-	padding: 20px 20px 20px 280px; 
+	padding: 20px 20px 20px 265px; 
 	font-family: 'Source Sans Pro', 'Helvetica Neue', sans-serif;
 }
 
 h1 {
     font-size: 14px;
     line-height: 20px;
+    position: relative;
 }
 
 a { 
@@ -79,10 +80,19 @@ button, .button {
     box-shadow: inset 0 1px 0 #fff;
     color: #454545;
 	font-size: 11px;
-    margin: 0 0 0 3px;
+    margin: 0 3px 0 0;
     padding: 2px 10px 3px;
     text-shadow: 0 1px 0 #fff;
     vertical-align: top;
+}
+
+.button-group {
+    position: absolute;
+    right: -5px;
+}
+
+.range-group {
+    margin: 0 0 10px;
 }
 
 header > p {
@@ -233,12 +243,12 @@ section {
     background-color: #dfe2e2;
     border-radius: 4px;
 	margin: 10px 0;
-    padding: 15px;
+    padding: 13px 15px;
     overflow: hidden;
 }
 
 	section h1 {
-		margin-bottom: 15px;
+		margin-bottom: 10px;
 		font-weight: normal;
 	}
 	
@@ -258,9 +268,9 @@ section {
 	}
 
     #controls {
-        border-right: 1px solid #d7d7d7;
+        border-right: 1px solid #ccc;
         float: left;
-        height: 70px;
+        height: 80px;
         margin-right: 15px;
         width: 140px;
     }
@@ -297,6 +307,7 @@ section {
 
     #animation {
         float: left;
+        margin-top: 5px;
         width: calc(100% - 170px);
     }
 
