--- a/style.css
+++ b/style.css
@@ -393,13 +393,13 @@ section {
     color: #000;
 }
 	
-		#library > a.selected > canvas {
-			background: #fff;
-		}
+    #library > a.selected > canvas {
+        background: #fff;
+    }
 
-        #library > a:hover {
-            background-color: rgba(255, 255, 255, 0.36);
-        }
+    #library > a:hover {
+        background-color: rgba(255, 255, 255, 0.36);
+    }
 
 #importexport {
 	position: fixed;
@@ -409,10 +409,10 @@ section {
 	width: 500px;
 	padding: 1em 2.6em 1em 1em;
 	margin-left: -250px;
-	background: rgba(0, 0, 0, .7);
-	color: white;
-	text-align: center;
-	border-radius: .8em;
+	background: #dfe2e2;
+    border: 1px solid #9c9e9e;
+	border-radius: 5px;
+    box-shadow: inset 0 1px 0 #fff, 0 6px 15px rgba(0, 0, 0, 0.15);
 }
 
 #importexport:not([class]) {
@@ -421,30 +421,25 @@ section {
 
 	#importexport > label {
 		display: block;
-		font-weight: bold;
-		text-shadow: 1px 1px 2px black;
+		text-shadow: 0 1px 0 #fff;
 	}
 	
 	#importexport > textarea {
 		display: block;
 		width: 100%;
-		height: 20em;
-		padding: .8em;
-		border: 1px solid black;
-		margin: .5em 0;
-		background: rgba(255, 255, 255, .85);
-		font-size: inherit;
-		text-shadow: 0 1px white;
-		border-radius: .3em;
-		box-shadow: .1em .1em .4em rgba(0,0,0,.5) inset;
+		height: 200px;
+		padding: 10px;
+		border: 1px solid #9c9e9e;
+		background: #fff;
+		font-size: 13px;
+		border-radius: 3px;
+		box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.09);
 	}
 	
 	#importexport > button {
-		font-size: 120%;
 	}
 	
 	#importexport > button:not(:hover) {
-		background: black;
 	}
 	
 	#importexport.export > button:first-of-type,
