--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
     background: #e6e9e9;
     color: #454545;
 	position: relative;
-	padding: 20px 20px 20px 265px; 
+	padding: 20px 20px 20px 255px; 
 	font-family: 'Source Sans Pro', 'Helvetica Neue', sans-serif;
 }
 
@@ -113,9 +113,10 @@ header > p {
     background-color: #fff;
 	border: 1px solid #9c9e9e;    
     border-radius: 4px;
+    box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);
 	position: absolute;
 	top: 1em;
-	left: 40px;
+	left: 30px;
 	line-height: 0;
 }
 	.coordinate-plane:before,
@@ -165,20 +166,27 @@ header > p {
 		content: 'Time (' attr(data-time) '%)';
 	}
 
-.control-point { 
+.control-point {
+   background: -webkit-linear-gradient(270deg,rgb(249,249,249) 50%,rgb(237,237,237) 50%);
 	position: absolute;
 	z-index: 1;
-	height: 20px; 
-	width: 20px; 
+	height: 16px; 
+	width: 16px; 
 	border: 1px solid #9c9e9e;
-	margin: -10px 0 0 -10px;
+	margin: -8px 0 0 -8px;
 	outline: none;
+    padding: 0 !important;
 	
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	
-	 -moz-border-radius: 10px; 
-	 border-radius: 10px; 
+	 -moz-border-radius: 8px; 
+	 border-radius: 8px; 
+}
+
+.control-point:focus {
+    border: 1px solid #0940fd !important;
+    box-shadow: 0 0 0 3px #6fb5f1;
 }
 
 #P0, #P3 {
@@ -197,20 +205,18 @@ header > p {
 
 #P0 { 
 	left: 4px; 
-	top: 304px;
+	top: 302px;
 }
 
 #P1 { 
-	background: #fff;
 }
 
 #P2 { 
-	background: #fff;
 }
 
 #P3 { 
 	right: -7px; 
-	top: 104px;
+	top: 102px;
 }
 
 #P1x, #P1y { 
