--- a/style.css
+++ b/style.css
@@ -429,12 +429,13 @@ section {
 	left: 50%;
 	z-index: 2;
 	width: 500px;
-	padding: 1em 2.6em 1em 1em;
+	padding: 15px;
 	margin-left: -250px;
 	background: #dfe2e2;
     border: 1px solid #9c9e9e;
 	border-radius: 5px;
     box-shadow: inset 0 1px 0 #fff, 0 6px 15px rgba(0, 0, 0, 0.15);
+    text-align: right;
 }
 
 #importexport:not([class]) {
@@ -443,19 +444,27 @@ section {
 
 	#importexport > label {
 		display: block;
+        text-align: left;
 		text-shadow: 0 1px 0 #fff;
 	}
 	
 	#importexport > textarea {
 		display: block;
-		width: 100%;
+		width: 485px;
 		height: 200px;
-		padding: 10px;
+        margin: 15px 0;
+		padding: 5px;
 		border: 1px solid #9c9e9e;
 		background: #fff;
 		font-size: 13px;
 		border-radius: 3px;
 		box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.09);
+        outline: none;
+	}
+
+    #importexport > textarea:focus {
+        border: 1px solid #0940fd !important;
+		box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.09), 0 0 0 2px #6fb5f1;
 	}
 	
 	#importexport > button {
