--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
     background: #e6e9e9;
     color: #454545;
 	position: relative;
-	padding: 20px 20px 20px 255px; 
+	padding: 20px 20px 20px 200px; 
 	font-family: 'Source Sans Pro', 'Helvetica Neue', sans-serif;
 }
 
@@ -115,9 +115,10 @@ header > p {
     border-radius: 4px;
     box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);
 	position: absolute;
-	top: 1em;
-	left: 30px;
+	top: -30px;
+	left: 0;
 	line-height: 0;
+    -webkit-transform: translateZ(0) scale(0.75,0.75);    
 }
 	.coordinate-plane:before,
 	.coordinate-plane:after {
@@ -291,6 +292,7 @@ section {
 
     #controls {
         border-right: 1px solid #ccc;
+        box-shadow: 1px 0 0 #f2f2f2;
         float: left;
         height: 80px;
         margin-right: 15px;
