--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
     background: #e6e9e9;
     color: #454545;
 	position: relative;
-	padding: 20px 20px 20px 200px; 
+	padding: 20px 20px 20px 255px; 
 	font-family: 'Source Sans Pro', 'Helvetica Neue', sans-serif;
 }
 
@@ -115,10 +115,9 @@ header > p {
     border-radius: 4px;
     box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);
 	position: absolute;
-	top: -30px;
-	left: 0;
-	line-height: 0;
-    -webkit-transform: translateZ(0) scale(0.75,0.75);    
+	top: 1em;
+	left: 30px;
+	line-height: 0;    
 }
 	.coordinate-plane:before,
 	.coordinate-plane:after {
@@ -206,18 +205,12 @@ header > p {
 
 #P0 { 
 	left: 2px; 
-	top: 302px;
-}
-
-#P1 { 
-}
-
-#P2 { 
+	top: 225px;
 }
 
 #P3 { 
 	right: -7px; 
-	top: 102px;
+	top: 75px;
 }
 
 #P1x, #P1y { 
@@ -231,7 +224,8 @@ header > p {
 }
 
 canvas#curve {
-    background: url(grid.png) -1px -100px repeat;
+    background: url(grid.png) 0 repeat;
+    background-size: 
 /*
 	background: #f0f0f0;
 	background: -moz-linear-gradient(-45deg, transparent 49%, rgba(0,0,0,.1) 49%, rgba(0,0,0,.1) 51%, transparent 51%, transparent) center no-repeat,
