--- a/style.css
+++ b/style.css
@@ -21,9 +21,6 @@
  * 
  */
 
-/**
- * Variables
- */
 * {	margin: 0; }
 
 #preview > canvas,
@@ -48,14 +45,11 @@ code {
     font-weight: 500;
 }
 
-/**
- * Styles
- */
 body {
     background: #e6e9e9;
     color: #454545;
 	position: relative;
-	padding: 20px 20px 20px 255px; 
+	padding: 20px 20px 20px 200px; 
 	font-family: 'Source Sans Pro', 'Helvetica Neue', sans-serif;
 }
 
@@ -115,8 +109,8 @@ header > p {
     border-radius: 4px;
     box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.12);
 	position: absolute;
-	top: 1em;
-	left: 30px;
+	top: 20px;
+	left: 25px;
 	line-height: 0;    
 }
 	.coordinate-plane:before,
@@ -224,8 +218,8 @@ header > p {
 }
 
 canvas#curve {
-    background: url(grid.png) 0 repeat;
-    background-size: 
+    background: url(grid.png) -1px -75px repeat;
+    background-size: 15px 450px;
 /*
 	background: #f0f0f0;
 	background: -moz-linear-gradient(-45deg, transparent 49%, rgba(0,0,0,.1) 49%, rgba(0,0,0,.1) 51%, transparent 51%, transparent) center no-repeat,
@@ -347,16 +341,19 @@ section {
 		left: 100%;
 	}
 
-#library > a {
-    border-radius: 3px;
-    color: #454545;
-	position: relative;
-	float: left;
-	margin: 0 .8em 1em 0;
-    padding: 1px 1px 0 1px;
-	text-decoration: none;
-    width: 120px;
+#library {
+    min-height: 126px;
 }
+    #library > a {
+        border-radius: 3px;
+        color: #454545;
+        position: relative;
+        float: left;
+        margin: 0 .8em 1em 0;
+        padding: 1px 1px 0 1px;
+        text-decoration: none;
+        width: 120px;
+    }
 
 	#library > a > canvas,
 	#library > a > span {
