--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ header > p {
     color: #454545;
     font-size: 18px;
     text-decoration: none;
+    cursor: default;
 }
 
 #importexport > textarea,
