--- a/style.css
+++ b/style.css
@@ -438,7 +438,7 @@ section {
     box-shadow: inset 0 1px 0 #fff, 0 6px 15px rgba(0, 0, 0, 0.15);
     text-align: right;
     -webkit-transform: scale(1);
-    transition: all 0.36s cubic-bezier(0,.74,.38,.99);
+    -webkit-transition: all 0.36s cubic-bezier(0,.74,.38,.99);
 }
 
 #importexport:not([class]) {
